third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-datetime/y10k.stderr
TOML parse error at line 2, column 10
  |
2 | d = 10000-01-01 00:00:00
  |          ^
expected newline, `#`
